hard-gists/1d596ca757a541da96ac3caa6f291229/run.log
=== Docker Run Log for 1d596ca757a541da96ac3caa6f291229 ===
Started at: Mi 29. Okt 12:45:00 CET 2025

[2025-10-29 12:45:00] START: Running container for 1d596ca757a541da96ac3caa6f291229
[2025-10-29 12:45:00] SUCCESS: Container 8dfabe6f1da624ddb0572001df4c87a19c1bbb2906105f3e0d24ad456d036e73 started for 1d596ca757a541da96ac3caa6f291229
=== Container logs for 1d596ca757a541da96ac3caa6f291229 ===
  File "/snippet.py", line 37
    print 'Input sequence length range: ', max(lengths), min(lengths)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1d596ca757a541da96ac3caa6f291229 ===
[2025-10-29 12:45:02] INFO: Container 8dfabe6f1da624ddb0572001df4c87a19c1bbb2906105f3e0d24ad456d036e73 has stopped
